--- a/p1/src/public/index.html
+++ b/p1/src/public/index.html
@@ -5,5 +5,5 @@
 
     <body>
         
-    <script type="text/javascript" src="main.9cc5a64a9708a7edf956.js"></script></body>
+    </body>
 </html>
